--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}",
       "!src/index.js",
+      "!src/reducers/index.js",
       "!src/setupTests.js",
       "!src/registerServiceWorker.js"
     ]
