--- a/.eslintrc
+++ b/.eslintrc
@@ -21,8 +21,7 @@
     "semi": ["error", "always"],
     "array-bracket-spacing": ["error", "never"],
     "block-spacing": ["error", "always"],
-    "brace-style": ["error", "1tbs", { "allowSingleLine": true }],
-    "camelcase": "warn",
+    "brace-style": ["warn", "1tbs", { "allowSingleLine": true }],
     "comma-dangle": ["error", "never"],
     "comma-spacing": ["error", { "before": false, "after": true }],
     "comma-style": ["error", "last"],
@@ -30,7 +29,7 @@
     "func-call-spacing": ["error", "never"],
     "indent": ["warn", 2, {"SwitchCase": 1}],
     "keyword-spacing": ["error", { "before": true, "after": true }],
-    "max-len": ["warn", 80],
+    "max-len": ["warn", 120],
     "no-duplicate-imports": "error",
     "id-length": "error",
     "id-blacklist": ["error", "data", "err", "e", "cb", "callback", "payload", "obj", "arr"],
